# hedging-against-turkish-inflation

./: .gitignore  Dockerfile  Makefile  README.md  database_name.db  guide.ipynb  pyproject.toml
data/processed/: database_name.db  df_bitcoin.csv  df_cpi.csv  df_gold.csv  df_gov_bonds.csv  df_hpi.csv  df_stock_exchange.csv
data/raw/: borsa_ist.xlsx  btc.xlsx  (+4 more)
docs/: mkdocs.yml
hedging-against-turkish-inflation/: __init__.py  dataset.py  features.py  plots.py
notebooks/: DATABASE AND PREPROCESS FOR DATA.ipynb  Database_Preprocess_Notebook.ipynb  Markowitz.ipynb  Markowitz_Notebook.ipynb  Visuals.ipynb  Visuals_Notebook.ipynb  btc.xlsx  cpi.xlsx  database_final.db  database_name.db  df_bitcoin.csv  df_cpi.csv  df_gold.csv  df_gov_bonds.csv  df_hpi.csv  df_stock_exchange.csv  hpi.xlsx  turkish_inflation_cpi.csv
reports/: Hedging Against Turkish Inflation_Paper.Rmd  Hedging Against Turkish Inflation_Paper.tex  Hedging Against Turkish Inflation_Presentation.Rmd  Hedging Against Turkish Inflation_Presentation.tex  Hedging-Against-Turkish-Inflation-Paper.aux  Hedging-Against-Turkish-Inflation-Paper.bbl  Hedging-Against-Turkish-Inflation-Paper.blg  Hedging-Against-Turkish-Inflation-Paper.tex  Hedging-Against-Turkish-Inflation-Presentation.aux  Hedging-Against-Turkish-Inflation-Presentation.bbl  Hedging-Against-Turkish-Inflation-Presentation.blg  Hedging-Against-Turkish-Inflation-Presentation.nav  Hedging-Against-Turkish-Inflation-Presentation.out  Hedging-Against-Turkish-Inflation-Presentation.tex  Hedging-Against-Turkish-Inflation_Paper.tex  Sources.bib  references.bib
(+11 files in other folders)
