[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hedging-against-turkish-inflation"
version = "0.0.1"
description = "This project looks at what asset classes would have helped a turkish investor hedge against turkish inflation."
authors = [
  { name = "DLASSER" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["hedging-against-turkish-inflation"]
force_sort_within_sections = true
